<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MyCalendarDemoActivity!</string>
    <string name="app_name">MyCalendarDemo</string>
    <string name="del">删除</string>
    <string name="writeit">随手记两笔...</string>
    <string name="activity_add_event_save">保存</string>
    <string name="contentisnull">内容不能为空</string>
    <string name="addview">添加</string>
    <string name="setting">设置</string>
    <string name="search">搜索</string>
    <string name="YES">确定</string>
    <string name="set">设定</string>
    <string name="Cancel">取消</string>
    <string name="plan">计划</string>
    <string name="memo">备忘</string>
    <string name="tip">提示</string>
    <string name="isDelete">确定要删除吗？</string>
    <string name="settime">请设置时间</string>
    <string name="action_settings">Settings</string>
    <string name="setup">设 置</string>
    <string name="plan_memo">计划/备忘分类</string>
    <string name="plan_analysis">计划完成度分析</string>
    <string name="add">添加事件</string>
    <string name="date">2013-6-28  周五</string>
</resources>