<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:layout_marginTop="12dp"
    android:background="#c0c0c0"
    android:orientation="vertical">
    <TextView 
        android:textSize="18.0sp" 
        android:layout_gravity="center_horizontal" 
        android:id="@+id/title" 
        android:layout_width="wrap_content" 
        android:textColor="#000000"
        android:layout_height="wrap_content" 
        android:text="@string/settime"/>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        >
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="46dp"
                android:gravity="center"
                android:text="年"
                android:textColor="#000000"
                android:id="@+id/tv1"/>
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="46dp"
                android:gravity="center"
                android:textColor="#000000"
                android:text="月"
                android:id="@+id/tv2"/>
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="46dp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="日"
                android:id="@+id/tv3"/>
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="30dp"
                android:gravity="center"
                android:textColor="#000000"
                android:text="时"
                android:id="@+id/tv4"/>
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="30dp"
                android:gravity="center"
                android:textColor="#000000"
                android:text="分"
                android:id="@+id/tv5"/>
            
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <com.calendar.demo.view.widget.WheelView android:id="@+id/year"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>  
        
        <com.calendar.demo.view.widget.WheelView android:id="@+id/month"
            android:layout_height="wrap_content"
            android:layout_width="46dp"/>
        
        <com.calendar.demo.view.widget.WheelView android:id="@+id/day"
            android:layout_height="wrap_content"
            android:layout_width="46dp"/>
        
        <com.calendar.demo.view.widget.WheelView android:id="@+id/hour"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"/>  
        
        <com.calendar.demo.view.widget.WheelView android:id="@+id/mins"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"/>  
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        
        <Button 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/date_cancel"
            />
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_ok"
            android:text="@string/set"/>
    </LinearLayout>
    
</LinearLayout>