<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
 <!-- 表头 -->
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title" >

        <TextView
            android:id="@+id/Top_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|center"
            android:textColor="#424139"
            android:textSize="19sp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:background="@drawable/search__default"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_pre_month"
            android:layout_width="15dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dip"
            android:background="@drawable/prev_month" />

        <Button
            android:id="@+id/btn_next_month"
            android:layout_width="15dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="90dip"
            android:background="@drawable/next_month" />
        
        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:background="@drawable/set__default"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
             />
        
    </RelativeLayout>

    <!-- 日历主体 -->
    
    <ViewFlipper 
        android:id="@+id/viewflipper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1">
	        
	    <LinearLayout
	        android:id="@+id/lly"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	        
	    </LinearLayout>
		
	    <LinearLayout 
	        android:id="@+id/llynext"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
	    </LinearLayout>	    
	    
    </ViewFlipper>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewflipper"
        >
        
    </ListView>
    
     <ImageView 
        android:id="@+id/iv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/addview"
        android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		android:background="@drawable/button__default"
     />
    
   
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/viewflipper"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/memo"
            android:textColor="#000000"
            android:textSize="22.0dip" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/plan"
            android:textColor="#000000"
            android:textSize="22.0dip" />

    </LinearLayout>

    <LinearLayout 
        android:id="@+id/cursorlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/out_cursor">
    <ImageView
        android:id="@+id/cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/a" />
    
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>

    <ImageView 
        android:id="@+id/ivs"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/addview"
        android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		android:background="@drawable/button__default"
     />
    

</RelativeLayout>